--- a/hackerDataCenterApp/package.json
+++ b/hackerDataCenterApp/package.json
@@ -12,7 +12,17 @@
   "dependencies": {
     "axios": "^1.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0",
+    "recharts": "^2.7.2",
+    "sass": "^1.63.6",
+    "zustand": "^4.3.8",
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.12.17",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0"
+
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
